Fixed spacing

--- a/client/src/css/schedule.css
+++ b/client/src/css/schedule.css
@@ -139,7 +139,7 @@ h3.gameHeader {
 
 .gameTeam {
 	width: 70px;
-	margin: 0px 15px;
+	margin: 0px 10px;
 }
 
 .gameTeam:nth-child(1) {
@@ -152,7 +152,7 @@ h3.gameHeader {
 }
 
 .gameWinner {
-	width: 30px;
+	width: 20px;
 	text-align: center;
 }
 
